// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseFunctionality ad-hoc events error handling handle acquireDistributedLock fails 1`] = `
[
  [
    "Processing event queue failed with unexpected error.",
    [Error: lock require failed],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "globalTenantId": undefined,
      "tenantId": 123,
      "tenantIdBase": 123,
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle checkEventAndGeneratePayload fails 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions",
    [Error: syntax error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle clusterQueueEntries fails 1`] = `
[
  [
    "Error during clustering of events - setting all queue entries to error.",
    [Error: syntax error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle getQueueEntriesAndSetToInProgress fails 1`] = `
[
  [
    "Processing event queue failed with unexpected error.",
    [Error: db error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "globalTenantId": undefined,
      "tenantId": 123,
      "tenantIdBase": 123,
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle modifyQueueEntry fails 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions",
    [Error: syntax error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling missing event implementation 1`] = `
[
  [
    "No Implementation found in the provided configuration file.",
    {
      "eventSubType": "NOT FOUND",
      "eventType": "404",
    },
  ],
]
`;

exports[`baseFunctionality getOpenQueueEntries return open event types 1`] = `
[
  {
    "subType": "DELETE_EVENTS",
    "type": "EVENT_QUEUE_BASE_PERIODIC",
  },
  {
    "subType": "DB",
    "type": "HealthCheck_PERIODIC",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality periodic events two open events - not allowed 1`] = `
[
  "More than one open events for the same configuration which is not allowed!",
  {
    "eventSubType": "DB",
    "eventType": "HealthCheck_PERIODIC",
  },
]
`;
